tests/diagnostics/functions/unknown_function/expect.txt
# exit: 1
input/main.lang0:2:12: error: unknown function 'missing'
      return missing(1)
             ^
